# traffic-balve

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  cronjob.txt  index.html  pyproject.toml  run_git_push.sh  run_script.sh  run_script2.sh  run_script_git.sh
data/: (51.327617, 7.852697)_2024-01-07 10:26:15.461802+01:00.json  (51.341209, 7.872643)_2024-01-07 10:26:15.461802+01:00.json  2023-12-20 10:50:43.063641.json  2023-12-20 11:09:56.003331.json  2023-12-20 11:12:42.347660.json  2023-12-20 11:31:14.957092.json  2023-12-20 12:15:01.910446.json  2023-12-20 14:00:01.456811.json  2023-12-20 14:15:01.718898.json  2023-12-20 14:30:02.452185.json  2023-12-20 14:45:01.717522.json  2023-12-20 14:50:55.800417.json  2023-12-20 14:57:05.230577.json  2023-12-20 15:01:06.300133.json  2023-12-20 15:40:02.468132.json  2023-12-20 15:50:01.968746.json  2023-12-20 16:00:01.864652.json  2023-12-20 16:30:01.621331.json  2023-12-20 16:50:01.014911.json  2023-12-20 17:20:01.844304.json  2023-12-20 17:50:01.741479.json  2023-12-20 18:00:01.665714.json  2023-12-20 18:30:02.434296.json  2023-12-20 18:32:41.033250+01:00.json  2023-12-20 18:40:02.941171+01:00.json  2023-12-20 19:36:47.313925+01:00.json  2023-12-20 21:21:56.063346+01:00.json  2023-12-20 21:50:02.318419+01:00.json  2023-12-20 22:30:01.965742+01:00.json  2023-12-20 22:50:02.347303+01:00.json  2023-12-21 05:00:02.595535+01:00.json  2023-12-21 05:10:02.642932+01:00.json  2023-12-21 05:20:02.390676+01:00.json  2023-12-21 05:40:01.874958+01:00.json  2023-12-21 05:50:01.806441+01:00.json  2023-12-21 06:20:02.041357+01:00.json  2023-12-21 07:47:16.654805+01:00.json  2023-12-21 07:50:02.960362+01:00.json  2023-12-21 08:10:16.746286+01:00.json  2023-12-21 08:50:01.464156+01:00.json  (+427 more)
notebooks/: analysis.ipynb  main.excalidraw  main.ipynb  mwe.csv  summary.csv  webappvis.ipynb
scripts/: run_git_push.sh  run_script.sh  run_script_git.sh
tests/: __init__.py  test_traffic_balve.py
traffic_balve/: __init__.py  camminady_theme.json  create_df.py  create_graphic.py  create_image.py  create_image2.py  parse.py  save_distance_matrix.py
website/: script.js  (+2 more)
(+1719 files in other folders)
