[tool.poetry]
name = "traffic_balve"
version = "0.1.0"
description = ""
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
googlemaps = "^4.10.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.2"
mypy = "^1.6.1"
isort = "^5.12.0"
pyclean = "^2.7.5"
pre-commit = "^3.5.0"
ipykernel = "^6.25.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
rich = "^13.6.0"
regex = "^2023.10.3"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
  "D100",
  "D101",
  "D103",
  "D104",
  "D401",
  "E501",
]
line-length = 80
select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
