[tool.poetry]
name = "traffic_balve"
version = "0.1.0"
description = ""
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
googlemaps = "^4.10.0"
polars = "^0.20.1"
altair = "^5.2.0"
pyarrow = "^14.0.2"
vl-convert-python = "^1.2.0"
pytz = "^2023.3.post1"
matplotlib = "^3.8.2"
ruff = "^0.1.11"
pyinstrument = "^4.6.1"
hvplot = "^0.9.1"
jupyter-bokeh = "^3.0.7"
scipy = "^1.11.4"
prophet = "^1.1.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
pyclean = "^2.7.6"
pre-commit = "^3.6.0"
ipykernel = "^6.28.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
rich = "^13.7.0"
regex = "^2023.12.25"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
  "D100",
  "D101",
  "D103",
  "D104",
  "D401",
  "E501",
]
line-length = 80
select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
